# OperationsCenter

./: .coverage  .custodian.yaml  .env.control-plane.example  .env.operations-center.example  .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  verdict.json
.claude/: settings.json
.console/: backlog.md  guidelines.md  log.md  task.md
.console/validation/: post_extraction_runtime_2026-05-08-rev2.md  post_extraction_runtime_2026-05-08-rev3.md  post_extraction_runtime_2026-05-08-rev4.md  post_extraction_runtime_2026-05-08.md
.custodian/: architecture.py  config.yaml  detectors.py  log_scanner.py  state_scanner.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  custodian-audit.yml
.hooks/: pre-push
_custodian/: architecture.py  detectors.py  doc_conventions.py  log_scanner.py  state_scanner.py
agent/: Dockerfile  agent.py  requirements.txt
config/: control_plane.example.yaml  operations_center.example.yaml  plane_task_template.example.md  repo_graph.yaml  runtime_binding_policy.yaml
config/managed_repos/: example_managed_repo.yaml  videofoundry.yaml
deployment/plane/: manage.sh
docs/: README.md  backlog.md  demo.md  phase5.md  phase6.md
docs/architecture/: anti_collapse_invariant.md  audit_architecture.md  audit_triage_plan.md  ci_integration_guide.md  code_health_audit.md  contract-map.md  execution-handoff-cutover.md  execution_target.md  ghost_work_audit.md  managed_repo_artifact_index.md  managed_repo_audit_dispatch.md  managed_repo_audit_system_final_verification.md  managed_repo_audit_toolset_contract.md  managed_repo_behavior_calibration.md  managed_repo_run_identity.md  managed_repo_slice_replay.md  phantom_helper_waves.md  phase6-boundary-decision.md  recovery_loop_design.md  routing-contract-fidelity.md  routing-tuning-examples.md  routing-tuning.md  runtime-truth-remediation-summary.md  upstream-patch-evaluation-examples.md  upstream-patch-evaluation.md  videofoundry_audit_artifact_contract.md  videofoundry_audit_ground_truth.md  videofoundry_managed_repo_contract.md
docs/audits/: dod_verification_final.md  final_rename_refactor_verification.md  final_rename_refactor_verification_3.md  integration_invariants_verification.md
docs/backends/: aider_local.md
docs/design/: autonomy_decision_engine.md  autonomy_gaps.md  autonomy_insight_engine.md  autonomy_proposer_integration.md  autonomy_repo_observer.md  autonomy_self_tuning_regulator.md  execution_budget_and_safety_controls.md  improve_worker.md  lifecycle.md  plane_kodo_wrapper.md  repo_aware_autonomy.md  roadmap.md
docs/history/: README.md
docs/implementation-notes/: runtime-fidelity-repair.md
docs/migration/: controlplane-execution-extraction.md
docs/operator/: archon_workflow_registration.md  diagnostics.md  managed_repo_troubleshooting.md  manifest_authoring.md  manifest_wiring.md  platformdeployment_compose_smoke.md  pr_review.md  recovery_policy.md  run-artifacts.md  runtime.md  self_healing_model.md  setup.md  switchboard.md  switchboard_live_verification.md  tuning.md  watchdog_loop.md  weekly_audits.md  workstation_compose_smoke.md
docs/specs/: consolidate-shared-utilities.md  cxrp-backend-card-vocabulary.md  decision-rules-test-coverage.md  decompose-application-service.md  decompose-autonomy-cycle.md  decompose-execution-service.md  decompose-reviewer-main.md  decompose-setup-main.md  decompose-usage-store.md  decompose-worker-main.md  execution-module-test-coverage.md  execution-workspace-manager-test-coverage.md  fix-spec-director-test-drift.md  observation-coverage-stage1-audit.md  operational-health-test-coverage.md  proposer-consumes-custodian-sweep.md  recovery-subsystem-test-coverage.md  reviewer-pr-state-machine.md  test-github-pr-adapter.md  test-operational-entrypoints.md  test-untested-decision-rules.md  test-untested-insight-derivers.md  watcher-entrypoint-test-coverage.md
examples/audit_contracts/: completed_artifact_manifest.json  completed_run_status.json  failed_artifact_manifest.json  failed_run_status.json
examples/mini_regression/: basic_fixture_integrity_suite.json  failure_slice_suite.json
patches/archon/: PATCH-001.yaml
registry/: source_registry.yaml
schemas/audit_contracts/: artifact_manifest.schema.json  run_status.schema.json
schemas/behavior_calibration/: calibration_report.schema.json
schemas/fixture_harvesting/: fixture_pack.schema.json
schemas/governance/: governance_report.schema.json
schemas/mini_regression/: suite_report.schema.json
schemas/slice_replay/: slice_replay_report.schema.json
scripts/: control-plane.sh  cp-status.py  kodo-shim  observability-first-run.sh  oc-status.py  operations-center.sh  reset-training-branches.sh
src/control_plane/: __init__.py
src/operations_center/: __init__.py  cross_repo_impact.py  impact_analysis.py  maintenance_windows.py  multi_step_planning.py  post_merge_regression.py  priority_scans.py  quality_alerts.py  reconcile_running.py  (+1 more)
tests/: conftest.py  test_aider_adapter.py  test_aider_local_adapter.py  test_api_repo_control.py  test_arch_scheduler.py  test_architecture_cleanup_guards.py  test_architecture_signal.py  test_backlog_promoter.py  test_backlog_promotion.py  test_branch_policy.py  test_bundles_2_3.py  test_chain_policy.py  test_check_signal_collector.py  test_circuit_breaker.py  test_circuit_breaker_e2e.py  test_collector_distinct_files.py  test_cross_signal.py  test_custodian_sweep.py  test_decision.py  test_decision_entrypoint.py  test_demo_cli.py  test_demo_routing.py  test_demo_stub_adapter.py  test_dependency_check.py  test_dependency_drift_collector.py  test_dependency_drift_deriver.py  test_dependency_drift_rule.py  test_deriver_regression.py  test_escalation.py  test_example_config.py  test_execution_controls.py  test_execution_health.py  test_execution_modes.py  test_executor_factory.py  test_executor_protocol.py  test_fix_validation_task.py  test_git_client.py  test_goal_file_idempotency.py  test_goal_section_guard.py  test_insights.py  (+57 more)
(+1136 files in other folders)
