[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "operations-center"
version = "0.1.0"
description = "Planning, policy, and evidence layer for canonical task proposals"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.7",
  "PyYAML>=6.0",
  "httpx>=0.27",
  "typer>=0.12",
  "cxrp @ git+https://github.com/Velascat/CxRP.git",
]

[project.scripts]
operations-center-setup = "operations_center.entrypoints.setup.main:app"
operations-center-audit = "operations_center.entrypoints.audit.main:app"
operations-center-artifacts = "operations_center.entrypoints.artifacts.main:app"
operations-center-calibration = "operations_center.entrypoints.calibration.main:app"
operations-center-fixtures = "operations_center.entrypoints.fixtures.main:app"
operations-center-replay = "operations_center.entrypoints.replay.main:app"
operations-center-regression = "operations_center.entrypoints.regression.main:app"
operations-center-governance = "operations_center.entrypoints.governance.main:app"
# Audit + maintenance trinity (added 2026-04-28). See docs/architecture/
# {ghost_work,flow,code_health}_audit.md for the catalogs each scanner enforces.
operations-center-ghost-audit       = "operations_center.entrypoints.ghost_audit.main:main"
operations-center-flow-audit        = "operations_center.entrypoints.flow_audit.main:main"
# Cross-repo Custodian sweep — runs custodian-audit against every managed repo
# with a local checkout and a .custodian.yaml, emits one Plane task per repo
# with --emit. Read-only against the managed repos; mutates Plane only.
operations-center-custodian-sweep   = "operations_center.entrypoints.custodian_sweep.main:main"
# code_health_audit moved to Custodian (2026-04-29). Run `custodian-audit
# --repo .` instead. The OC-specific detectors (OC1-OC9) live in
# _custodian/detectors.py and are wired via .custodian.yaml.
operations-center-recover-stale     = "operations_center.entrypoints.maintenance.recover_stale:main"
operations-center-cleanup-state     = "operations_center.entrypoints.maintenance.cleanup_state:main"
operations-center-close-stale-prs   = "operations_center.entrypoints.maintenance.close_stale_prs:main"
operations-center-cleanup-stale-backlog = "operations_center.entrypoints.maintenance.cleanup_stale_backlog:main"
operations-center-check-regressions = "operations_center.entrypoints.maintenance.check_regressions:main"
operations-center-triage-scan       = "operations_center.entrypoints.maintenance.triage_scan:main"
# Operator one-shots — added 2026-04-28 from audit triage Group B.
operations-center-autonomy-tiers    = "operations_center.entrypoints.autonomy_tiers.main:main"
operations-center-ci-monitor        = "operations_center.entrypoints.ci_monitor.main:main"
# Phase 13 — re-audit trigger evaluator. Cron-friendly; nonzero exit when stale.
operations-center-reaudit-check     = "operations_center.entrypoints.reaudit_check.main:main"

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.5",
  "ty>=0.0.28",
  "custodian @ git+https://github.com/Velascat/Custodian.git@main",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src", "."]
testpaths = ["tests"]
filterwarnings = [
  "ignore:cannot collect test class:pytest.PytestCollectionWarning",
]
markers = [
  "integration: tests that require a live external service (run with: pytest tests/integration/ -v)",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
# Tool-side replacements for Custodian native detectors deprecated under the
# "use the tool first" principle. See Custodian docs/design/detector_disposition_matrix.md.
extend-select = [
    "T201",                                              # C2  — print()
    "S101",                                              # C40 — assert in prod
    "S110",                                              # C4  — try/except/pass
    "S324",                                              # C31 — weak hash
    "S602", "S603",                                      # C23 — subprocess shell=True
    "BLE001",                                            # C9  — blind Exception
    "DTZ001", "DTZ003", "DTZ005", "DTZ006", "DTZ007",   # C10 — naive datetime
    "G004",                                              # C15 — f-string in logger
    "B006",                                              # C38 — mutable default arg
    "B028",                                              # C42 — warnings.warn no stacklevel
    "PLC1802",                                           # C17 — len(x) == 0
    "TRY002",                                            # C20 — raise vanilla Exception
    "TRY203",                                            # D9  — useless try/except
    "PGH003",                                            # C35 — bare # type: ignore
    "RET503",                                            # D8  — implicit return
    "N818",                                              # N1  — exception class naming
]

[tool.ty.environment]
python-version = "3.11"
